# chess-move-stats

./: .gitignore  Makefile  README.md  pyproject.toml
data/sample/: sample.pgn
data/sample/games/: games-00000.parquet
notebooks/: explore_sample.ipynb  games_by_decade.ipynb  rook_b5.ipynb  rook_b5_by_material.ipynb  rook_b5_by_move.ipynb
src/chess_corpus/: analysis.py  build_sample.py  download.py  eco_names.json  eco_names.py  index_games.py  paths.py  reshard.py
src/chess_corpus/queries/: piece_on_square.py
