[project]
name = "chess-move-stats"
version = "0.1.0"
description = "Ingest a master-level chess game corpus (Caissabase) and run move/position statistics"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "duckdb>=1.5.3",
    "py7zr>=1.1.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "tqdm>=4.68.2",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_corpus"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]
